--- a/PEC2_FelipeYebes.ipynb
+++ b/PEC2_FelipeYebes.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1G7g8k_orjgCsLHk8bz-uoeTsrFHrEEFv",
-      "authorship_tag": "ABX9TyNB/nP5O7nOufQlFUXYsQFn",
+      "authorship_tag": "ABX9TyNrgpvIdAYx79JZZwsA4sJl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/fyebes/MACHIN_LEARNING/blob/main/PEC2_FelipeYebes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# PEC 2 Felipe Yebes_ML"
+      ],
+      "metadata": {
+        "id": "ZAw9DaLAJ9ik"
+      }
     },
     {
       "cell_type": "code",
@@ -73,7 +82,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "TMWJk2_UJHuw",
         "outputId": "62756379-efa7-4ed8-f7c1-cf1e0e5039f0"
@@ -1227,7 +1237,8 @@
       "metadata": {
         "id": "Wyvsn-hVgJqO",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "809f2e08-9a4a-41f8-d4e4-290ff0059626"
       },
@@ -2261,7 +2272,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "_w8kDFUvlKAs",
         "outputId": "8a9b9c71-6a82-4ba8-94c2-98e6711bb8f2"
@@ -2329,7 +2341,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "mMy-Q0tNFpMQ",
         "outputId": "95369861-9611-4dd9-f995-352dcdbd2c48"
@@ -2419,7 +2432,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "liPd9FvnBHic",
         "outputId": "684432c6-e9af-41f7-defc-9770496eb933"
@@ -2463,7 +2477,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "Y7hcYcG-eHhA",
         "outputId": "73bf186b-4136-4a66-b99e-608de2944fec"
@@ -2698,7 +2713,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "-qmFKguQ7UzR",
         "outputId": "d99c9de5-8cfb-46a6-a119-0a8c526e0438"
@@ -2876,7 +2892,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 1379
         },
         "id": "a7rn5hn9-h2d",
         "outputId": "b37adbdb-9f01-43f4-d0bf-1a2ebcc36f2c"
